/*
 * $Id: ChangeLog,v 1.4934 2006/04/14 22:31:01 maurifull Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-04-14 21:30 UTC+0100 Mauricio Abre <mgabre@gmail.com>
  * source/rtl/gtalleg/gtalleg.c
    ! Changed HB_NEW_KCTRL to HB_EXT_INKEY, new control codes was not working anymore..

2006-04-14 19:35 UTC+0100 Mauricio Abre <mgabre@gmail.com>
  * include/gfx.ch
  * include/gfxtrans.ch
  * source/rtl/gtalleg/gtalleg.c
    + Added 2 misssing gfx primitives: gfxMouseX() and gfxMouseY()

2006-04-14 19:15 UTC+0100 Mauricio Abre <mgabre@gmail.com>
  * source/rtl/gtalleg/gtalleg.c
    + Added drawing mode set capability for SOLID and XOR modes

2006-04-13 18:35 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/tget.prg
    * Minor correction to recent change

2006-04-13 15:23 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source\pp\ppcore.c
    * Fixed and greatly simplified handling of \ in ConvertPatterns()

2006-04-13 10:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    - fixed to not display cursor out of get area if we press comma key in
      a numeric get without decimal point. This is complementary fix of the
      last tget commit

2006-04-12 23:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * utils/xbscript/xbscript.prg
  * utils/xbscript/xbs_harb.ch
    * Corrected NextToken() to treat \ as a single char token
  * utils/xbscript/xbscript.prg
    * Fixed and optimized AtInRules() support of \
    * Rewrote match rule compiler in CompileRule() to correctly implement \ support

2006-04-12 23:50 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    ! fixed some bugs in numeric gets:
    - fixed to display negative numbers correctly in get with or without
      decimal point.
    - fixed to not display negative zero.